--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="container">
 		<div id="menu">
-			<span id="theme">[라이트/다크]</span>
+			<span id="information">[정보]</span>
 			<span id="filter">[필터]</span>
 			<span id="sort">[정렬]</span>
 			<span id="statistics">[통계]</span>
@@ -23,8 +23,7 @@
 			<span id="hangman">[행맨]</span>
 		</div>
 		<div id="view"></div>
-		<div id="close">[닫기]</div>
-		<input id="search">
+		<input id="search" spellcheck="false">
 		<div id="result"></div>
 	</div>
 	<script src="./index.js"></script>
