index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 			<span id="hangman">[행맨]</span>
 		</div>
 		<div id="view"></div>
-		<input id="search" spellcheck="false">
+		<input id="search" type="text" spellcheck="false">
 		<div id="result"></div>
 	</div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 	<script src="./index.js"></script>
 </body>
 </html>
