Add 'examples' span to the menu section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div id="menu">
 			<span id="information">[정보]</span>
 			<span id="filter">[필터]</span>
+			<span id="examples">[예문 검색]</span>
 			<span id="sort">[정렬]</span>
 			<span id="statistics">[통계]</span>
 		</div>
